base/monitoring/gatus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatus
  labels:
    app.kubernetes.io/component: gatus
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/component: gatus
  template:
    metadata:
      labels:
        app.kubernetes.io/component: gatus
    spec:
      runtimeClassName: gvisor
      serviceAccountName: gatus
      terminationGracePeriodSeconds: 5
      containers:
      - name: gatus
        image: ghcr.io/twin/gatus:v5.33.0@sha256:bf249f4d7cf69e825457ade2ebc3d11168d73527ef1657a653119a0d9da97a4a
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 5
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            add:
              - "NET_BIND_SERVICE"
              - "SYS_TIME"
            drop:
              - ALL
        volumeMounts:
          - mountPath: /config
            name: gatus-config
      volumes:
        - name: gatus-config
          configMap:
            name: gatus
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
