base/monitoring/gatus/allow-ext4-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ext4-egress
spec:
  podSelector:
    matchLabels:
      gatus: true
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock: 5.135.136.131/32
        cidr: 
    ports:
    - protocol: TCP
      port: 443
    - protocol: TCP
      port: 80
